add total paid
