# docs/api/api.yaml
@@ -312,6 +312,9 @@ components:
         status:
           type: string
           description: Description of teh order
+        paymentStatus:
+          type: string
+          description: Status of the payment
         subTotalPrice:
           type: number
           format: double
@@ -324,6 +327,10 @@ components:
           type: number
           format: double
           description: Total price to charge to the customer
+        totalPaid:
+          type: number
+          format: double
+          description: Total amount paid by the customer
         currency:
           type: string
           description: Currency
@@ -362,6 +369,7 @@ components:
         shippingAddress:
           type: object
           $ref: "#/components/schemas/Address"
+          nullable: true
 
     GetOrderResponse:
       type: object
@@ -393,6 +401,9 @@ components:
         status:
           type: string
           description: Status of the order
+        paymentStatus:
+          type: string
+          description: Status of the payment
         subTotalPrice:
           type: number
           format: double
@@ -409,6 +420,10 @@ components:
           type: number
           format: double
           description: Total price to charge to the customer
+        totalPaid:
+          type: number
+          format: double
+          description: Total amount paid by the customer
         currency:
           type: string
           description: Currency
